# ChangeLog for gnome-base/gnome-vfs
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.218 2006/09/12 14:24:13 dang Exp $

  12 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> gnome-vfs-2.16.0.ebuild:
  Fix broken deps left over from fixing gnome-mount

  11 Sep 2006; Markus Rothe <corsair@gentoo.org> gnome-vfs-2.14.2-r1.ebuild:
  Stable on ppc64; bug #146855

  09 Sep 2006; <ticho@gentoo.org> gnome-vfs-2.14.2-r1.ebuild:
  Stable on x86, bug #146855.

  09 Sep 2006; <nixnut@gentoo.org> gnome-vfs-2.14.2-r1.ebuild:
  Stable on ppc wrt bug 146855

  09 Sep 2006; <blubb@gentoo.org> gnome-vfs-2.14.2-r1.ebuild:
  stable on amd64

  08 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-vfs-2.14.2-r1.ebuild:
  Stable on sparc wrt #146855

*gnome-vfs-2.16.0 (07 Sep 2006)

  07 Sep 2006; Daniel Gryniewicz <dang@gentoo.org>
  +files/gnome-vfs-2.15.2-headers-define.patch, +gnome-vfs-2.16.0.ebuild:
  New version for gnome 2.16

  06 Sep 2006; Joshua Kinard <kumba@gentoo.org> gnome-vfs-1.0.5-r4.ebuild,
  gnome-vfs-2.12.1.1-r1.ebuild, gnome-vfs-2.12.2.ebuild,
  gnome-vfs-2.14.2.ebuild, gnome-vfs-2.14.2-r1.ebuild:
  Removing all mips keywords except from latest stable to fix mips
  dependencies for eliminating gnome support.

  19 Aug 2006; Bryan Østergaard <kloeri@gentoo.org>
  gnome-vfs-2.14.2-r1.ebuild:
  Add ~ia64 keyword.

  18 Aug 2006; John N. Laliberte <allanonjl@gentoo.org>
  gnome-vfs-1.0.5-r4.ebuild:
  preserve some macros, use eautoreconf, fixes #144350

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> gnome-vfs-2.14.2.ebuild:
  Stable on ppc64

  15 Aug 2006; John N. Laliberte <allanonjl@gentoo.org>
  gnome-vfs-1.0.5-r4.ebuild:
  move gnome-common-2* to SLOT 3. change depend to
  =gnome-base/gnome-common-1.2* fixes #139517

  26 Jul 2006; Joshua Kinard <kumba@gentoo.org> gnome-vfs-2.14.2.ebuild:
  Stabling gnome-vfs on mips for now to satisfy some old repoman deps.