@@ -82,14 +82,14 @@ EBUILD gnome-vfs-2.14.2.ebuild 1858 RMD160 dfce09e80ef925261242238408da62019149c
 MD5 60dc204e2204eead0a179e3f6ec479a4 gnome-vfs-2.14.2.ebuild 1858
 RMD160 dfce09e80ef925261242238408da62019149c2cb gnome-vfs-2.14.2.ebuild 1858
 SHA256 c4753afff8a8bf7b9f3a6cfb9fbe037c90eab505dc24d68ede2b057dc6110f2b gnome-vfs-2.14.2.ebuild 1858
-EBUILD gnome-vfs-2.16.0.ebuild 2283 RMD160 49f6a33d325874cb007816809dd6712503fd0b50 SHA1 3ad5947dcc0ea1914c70ac3d6a8b2bca53ef3fa1 SHA256 882b4c61afb0f1c8313fdfadc468a1c3cd35d7f81b9c1208ebb28000d09985b8
-MD5 022c8d0e00c2064729b1a331efbe62c5 gnome-vfs-2.16.0.ebuild 2283
-RMD160 49f6a33d325874cb007816809dd6712503fd0b50 gnome-vfs-2.16.0.ebuild 2283
-SHA256 882b4c61afb0f1c8313fdfadc468a1c3cd35d7f81b9c1208ebb28000d09985b8 gnome-vfs-2.16.0.ebuild 2283
-MISC ChangeLog 27607 RMD160 dde0502dbc1dc2a92c8c5ea9fc2b76e664b85599 SHA1 a6de6651817250ebd49191f6d1950116391e8c6a SHA256 851e47abb24555bf13b2628cc39a2dac9f8f43b8a6d24ed52ef5f5c2379d9a90
-MD5 134c9b9b37234284dbab78facb62b53d ChangeLog 27607
-RMD160 dde0502dbc1dc2a92c8c5ea9fc2b76e664b85599 ChangeLog 27607
-SHA256 851e47abb24555bf13b2628cc39a2dac9f8f43b8a6d24ed52ef5f5c2379d9a90 ChangeLog 27607
+EBUILD gnome-vfs-2.16.0.ebuild 2358 RMD160 92b1d595538e8d8f5df6ad4bb4751f609692b930 SHA1 40afc8f9cc71921ad7e2be0b7a3ed971d94890a3 SHA256 62ae7ea34e054af0fc292f642f3e1717f3636d76f74891cbc31cc75fda8f0fee
+MD5 4ae26ee05217166857e8b308a07b4c6d gnome-vfs-2.16.0.ebuild 2358
+RMD160 92b1d595538e8d8f5df6ad4bb4751f609692b930 gnome-vfs-2.16.0.ebuild 2358
+SHA256 62ae7ea34e054af0fc292f642f3e1717f3636d76f74891cbc31cc75fda8f0fee gnome-vfs-2.16.0.ebuild 2358
+MISC ChangeLog 27725 RMD160 317c7e4d2451898187d5e383ea48233edc14cf39 SHA1 9e4ddf8ac397e221f821bb98fa8191965c4ffe83 SHA256 9bf240ceed44ed0d3cc9574c73a50e7a45832547dd37e2dbd3e9c23a3bc50194
+MD5 e4ac21b652920d0c9c86fd24108b82d0 ChangeLog 27725
+RMD160 317c7e4d2451898187d5e383ea48233edc14cf39 ChangeLog 27725
+SHA256 9bf240ceed44ed0d3cc9574c73a50e7a45832547dd37e2dbd3e9c23a3bc50194 ChangeLog 27725
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e metadata.xml 158
@@ -115,7 +115,7 @@ SHA256 74dddd6b6a6332cab3a356cf0656795443dbeb2ba66317c54dc3b5ee6fdf5b64 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFFBsPOomPajV0RnrERAn76AJ0X9Tdi28iiON3oWka7ADHaRVJT0wCdFnRC
-rh4jGsmv2x/nzFQ5hBuipPE=
-=0izN
+iD8DBQFFCvxwomPajV0RnrERAmVIAJ9Vs9E25Au4zr/5sGM2jMP8cuISGgCeKj9U
+CclRDvH3yGKI9CNl50V4KM4=
+=kQ5y
 -----END PGP SIGNATURE-----
