@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-vfs
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.218 2006/09/12 14:24:13 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.219 2006/09/15 19:18:02 dang Exp $
+
+  15 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> gnome-vfs-2.16.0.ebuild:
+  Make 2.16 keywords match 2.14 keywords
 
   12 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> gnome-vfs-2.16.0.ebuild:
   Fix broken deps left over from fixing gnome-mount
